# chapterry

./: README.md  pyproject.toml
mp3_chapter_manager/: main.py
tests/: test_mp3_chapter_manager.py
