[tool.poetry]
name = "mp3-chapter-manager"
version = "0.1.0"
description = ""
authors = ["Krzysztof Grajda <krzysztof.grajda@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
